[package]
name = "std-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "std-dev"
path = "src/bin/main.rs"
required-features = ["bin"]

[dependencies]
rand = { version = "0.8" }

nalgebra = { version = "0.30", optional = true }
simba = { version = "0.7", optional = true, default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }
approx = { version = "0.5", optional = true, default-features = false }

rug = { version = "1.15", optional = true }

colored = { version = "2.0", optional = true }
atty = { version = "0.2.14", optional = true }
clap = { version = "3.1", optional = true, features = ["cargo"] }
poloto = { version = "5", optional = true, default-features = false }

[features]
default = ["bin", "pretty", "regression", "arbitrary-precision"]

##
# Library features (also applies to binary)
##

regression = ["nalgebra", "simba"]
# Arbitrary precision for regression.
#
# Increases max degree of polynomial (with good results).
# Without this feature, it's basically limited to 10 degrees.
arbitrary-precision = ["rug", "regression", "num-traits", "approx"]


##
# Binary features
##

bin = ["clap", "poloto"]

# Prettier bin output
pretty = ["bin", "atty", "colored"]
