[package]
name = "std-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "std-dev"
path = "src/bin/main.rs"
required-features = ["bin"]

[dependencies]
rand = { version = "0.8", optional = true }

num-traits = { version = "0.2", default-features = false, features = ["std"], optional = true }

nalgebra = { version = "0.30", optional = true }

simba = { version = "0.7", optional = true, default-features = false }
approx = { version = "0.5", optional = true, default-features = false }
rug = { version = "1.15", optional = true }

primal-sieve = { version = "0.3.2", optional = true }
iter-set = { version = "2.0", optional = true }

colored = { version = "2.0", optional = true }
atty = { version = "0.2.14", optional = true }
clap = { version = "3.1", optional = true, features = ["cargo"] }
poloto = { version = "=5.18", optional = true, default-features = false }

[features]
default = ["bin", "pretty", "regression", "percentile-rand", "simplify-fraction", "generic-impls"]

# Very commonly used features
base = ["percentile-rand", "simplify-fraction", "generic-impls"]

##
# Library features (also applies to binary)
##

regression = ["nalgebra"]
# Arbitrary precision for regression.
#
# Increases max degree of polynomial (with good results).
# Without this feature, it's basically limited to 10 degrees.
arbitrary-precision = ["rug", "simba", "regression", "num-traits", "num-traits/std", "approx"]

# Enables the recommended pivot_fn for `percentile::*` functions.
percentile-rand = ["rand"]

# Allows input of fractions which are not fully simplified.
# Also enables Eq and Ord implementations for fractions.
simplify-fraction = ["primal-sieve", "iter-set"]

# Allows for generic implementation of traits from this crate.
generic-impls = ["num-traits"]


##
# Binary features
##

bin = ["clap", "poloto"]

# Prettier bin output
pretty = ["bin", "atty", "colored"]

[profile.release]
lto = true
opt-level = "s"
